Fixed button alignment issues.
git-svn-id: https://svn.habariproject.org/habari/trunk/htdocs/system@2355 653ae4dd-d31e-0410-96ef-6bf7bf53c507

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -455,6 +455,10 @@ p:hover > label.abovecontent {
 	margin-left: 10px;
 }
 
+.button.delete {
+	float: right;
+	}
+
 .button#delete {
 	float: left;
 	margin-left: 0;
@@ -518,6 +522,10 @@ p:hover > label.abovecontent {
 
 .create input.text:focus {
 	color: #222;
+}
+
+body.page-Publish .buttons input {
+	float: right;
 }
 
 .create textarea {
